crates/pgls_pretty_print/tests/snapshots/single/tests__min_max_expr_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/min_max_expr_0_60.sql
snapshot_kind: text
---
SELECT GREATEST(1, 2, 3), LEAST(10, 20, 5);
