crates/pgls_pretty_print/tests/snapshots/single/tests__min_max_expr_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/min_max_expr_0.sql
snapshot_kind: text
---
SELECT GREATEST(1, 2, 3), LEAST(10, 20, 5);
