crates/pgls_pretty_print/tests/snapshots/single/tests__minimal_120_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/minimal_120.sql
snapshot_kind: text
---
SELECT a FROM t;
