crates/pgls_pretty_print/tests/snapshots/single/tests__minimal_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/minimal.sql
snapshot_kind: text
---
SELECT a FROM t;
