crates/pgls_pretty_print/tests/snapshots/single/tests__minimal_80.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/minimal_80.sql
snapshot_kind: text
---
SELECT a FROM t;
