crates/pgls_pretty_print/tests/snapshots/single/tests__nested_column_refs_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/nested_column_refs.sql
snapshot_kind: text
---
SELECT schema."table"."column" FROM schema."table";
