crates/pgls_pretty_print/tests/snapshots/single/tests__nested_dollar_quotes_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/nested_dollar_quotes_0.sql
snapshot_kind: text
---
create function test_nested()
returns VOID
language plpgsql
as $function$
BEGIN
  EXECUTE $inner$SELECT 1$inner$;
END;
$function$;
